--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,15 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
+    buildToolsVersion '33.0.0'
 
     defaultConfig {
         applicationId "com.airport.flightsschedule.flightstatus"
         minSdk 21
-        targetSdk 30
-        versionCode 3
-        versionName "1.2"
+        targetSdk 31
+        versionCode 4
+        versionName "1.2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,19 +22,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.appcompat:appcompat-resources:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.0"
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.appcompat:appcompat-resources:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -45,9 +51,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 
-    //smart_tabs
-    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
-    implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
+    //lifecycle
+    def lifecycle_version = "2.5.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    //lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    //room database
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -55,26 +71,33 @@ dependencies {
 
     //gson
     implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+    //smart_tabs
+    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    //location
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    //ads
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
 
     //progressbar
     implementation 'com.kaopiz:kprogresshud:1.2.0'
 
     //sdp
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
     //shimmer
     implementation 'xyz.peridy.shimmer:shimmerlayout:1.1'
 
     //lottie
     implementation 'com.airbnb.android:lottie:3.6.1'
-
-    //ads
-    implementation 'com.google.android.gms:play-services-ads:20.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
